#295994 Fabric JS Website Bug: Text cursor too long in textbox in CommandBar

--- a/src/components/SearchBox/SearchBox.scss
+++ b/src/components/SearchBox/SearchBox.scss
@@ -149,7 +149,6 @@ $SearchBox-command-color: #F4F4F4;
   .ms-SearchBox-field,
   .ms-SearchBox-label {
     height: $SearchBox-commandbarHeight;
-    line-height: $SearchBox-commandbarHeight;
   }
 
   .ms-SearchBox-field {
